<resources>
    <string name="app_name">Storee</string>
    <string name="app_icon">App icon</string>
    <string name="read_inspiring_stories">Read inspiring stories</string>
    <string name="please_enter_valid_email">Masukkan Email yang valid</string>
    <string name="email_is_required">Email wajib diisi</string>
    <string name="input_email">Masukkan Email Anda</string>
    <string name="email">Email</string>
    <string name="login">Masuk</string>
    <string name="welcome_to_storee">Hai! Selamat Datang di Storee!</string>
    <string name="password">Password</string>
    <string name="input_password">Masukkan Password</string>
    <string name="password_is_required">Password wajib diisi</string>
    <string name="password_length_is_not_enough">Password tidak boleh kurang dari 8 karakter</string>
    <string name="dont_have_an_account">Belum punya akun? </string>
    <string name="register_here">Daftar di sini</string>
    <string name="register">Daftar</string>
    <string name="register_your_account">Daftarkan diri Anda di Storee</string>
    <string name="have_an_account">"Sudah punya akun? "</string>
    <string name="name">Nama</string>
    <string name="input_name">Masukkan Nama Anda</string>
    <string name="name_is_required">Nama wajib diisi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add_story">Add Story</string>
    <string name="title_settings">Settings</string>
    <string name="story_date">19 Jan 2024</string>
    <string name="welcome">"Welcome, %1$s"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="add_description">Tambahkan deskripsi cerita</string>
    <string name="upload">Upload</string>
    <string name="description_is_required">Deskripsi wajib diisi</string>
    <string name="logout">Logout</string>
    <string name="field_couldnt_be_empty">Field tidak boleh kosong</string>
    <string name="something_went_wrong">Terjadi Kesalahan</string>
    <string name="session_expired_message">Maaf, Sesi Anda telah habis, silahkan Login kembali</string>
    <string name="session_expired_title">Sesi Habis</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="image_not_available">Gambar tidak tersedia</string>
    <string name="image_and_description_couldnt_be_empty">Gambar atau Deskripsi Tidak Boleh Kosong</string>
    <string name="image_something_wrong">Image Something Wrong</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action_maps">Maps</string>
    <string name="go_to_map_activity">Go To Map Activity</string>
    <string name="retry">Muat ulang</string>
</resources>