<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/header"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_register"
            android:layout_width="match_parent"
            android:layout_height="720dp"
            android:background="@drawable/auth_background"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_register"
                style="@style/Nunito.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="@id/cl_register"
                app:layout_constraintTop_toTopOf="@id/cl_register" />

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/Nunito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_your_account"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/cl_register"
                app:layout_constraintTop_toBottomOf="@id/tv_register" />

            <TextView
                android:id="@+id/tv_register_name"
                style="@style/Poppins.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/name"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

            <com.notsatria.storyapp.ui.components.NameEditText
                android:id="@+id/ed_register_name"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="4dp"
                android:hint="@string/input_name"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_register_name" />

            <TextView
                android:id="@+id/tv_register_email"
                style="@style/Poppins.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/email"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_register_name" />

            <com.notsatria.storyapp.ui.components.EmailEditText
                android:id="@+id/ed_register_email"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="4dp"
                android:hint="@string/input_email"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_register_email" />

            <TextView
                android:id="@+id/tv_register_password"
                style="@style/Poppins.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/password"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_register_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/tv_register_password"
                app:passwordToggleEnabled="true">

                <com.notsatria.storyapp.ui.components.PasswordEditText
                    android:id="@+id/ed_register_password"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="4dp"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:paddingVertical="4dp"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/register"
                app:layout_constraintTop_toBottomOf="@id/layout_register_password" />

            <LinearLayout
                android:id="@+id/tv_go_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/btn_register">

                <TextView
                    style="@style/Poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account" />

                <TextView
                    style="@style/Poppins.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/md_theme_primary" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
