<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ui.addstory.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/preview_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toTopOf="@id/llButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/layout_add_description">

            <Button
                android:id="@+id/btn_gallery"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/gallery" />

            <Button
                android:id="@+id/btn_camera"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/camera" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_add_description"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="8dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/button_add">

            <com.notsatria.storyapp.ui.components.DescriptionEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/add_description"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>